--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="container header__container">
 		<div class="header__top">
 			<div class="header__top-left">
-				<div class="header__top-logo"><img src="/img/logo.png" alt=""></div>
+				<div class="header__top-logo"><img src="./img/logo.png" alt=""></div>
 				<div class="header__top-phone"><a class="top-phone" href="tel:+74953225448">+7 495 322-54-48</a></div>
 			</div>
 			<div class="header__top-rigth">
@@ -790,9 +790,11 @@
 								</div>
 							</li>
 							<li class="col-4 placement__item link-container">
-								<a class="placement__link-content" href="">Посмотреть больше вариантов <svg class="link-arrow"
+								<a class="placement__link-content" href="">
+									<span>Посмотреть больше вариантов</span>
+									<svg class="link-arrow"
 										width="11" height="18" viewBox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1.49998 1.00002L9.27815 8.7782L1.49998 16.5564" stroke="#F0BF5F"
+										<path d="M1.49998 1.00002L9.27815 8.7782L1.49998 16.5564" stroke="#FFFFFF"
 											stroke-width="2" />
 									</svg>
 								</a>
